fix: icon alignment

--- a/src/components/IconButton/iconButton.module.css
+++ b/src/components/IconButton/iconButton.module.css
@@ -7,7 +7,11 @@
     cursor: pointer;
     border-radius: .5rem;
     transition: box-shadow .3s;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
 }
+
 .button:hover {
     box-shadow: 0 .25rem .25rem 0 #00000040;
 }
